// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueCsvImport has expected html 1`] = `
<div
  class="vue-csv-uploader"
>
  <div
    class="form"
  >
    <div
      class="vue-csv-uploader-part-one"
    >
      <div
        class="form-check form-group csv-import-checkbox"
      >
        <input
          class="form-check-input"
          id="hasHeaders9"
          type="checkbox"
          value=""
        />
         
        <label
          class="form-check-label"
          for="hasHeaders9"
        >
          
                        File Has Headers
                    
        </label>
      </div>
       
      <div
        class="form-group csv-import-file"
      >
        <input
          class="form-control-file"
          name="csv"
          type="file"
        />
         
        <!---->
      </div>
       
      <div
        class="form-group"
      >
        <button
          class="btn btn-primary"
          disabled="disabled"
          type="submit"
        >
          
                        Next
                    
        </button>
      </div>
    </div>
     
    <div
      class="vue-csv-uploader-part-two"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`VueCsvImport headers prop removes checkbox and not use headers 1`] = `
<div
  class="vue-csv-uploader"
>
  <div
    class="form"
  >
    <div
      class="vue-csv-uploader-part-one"
    >
      <div
        class="form-check form-group csv-import-checkbox"
      >
        <input
          class="form-check-input"
          id="hasHeaders27"
          type="checkbox"
          value="false"
        />
         
        <label
          class="form-check-label"
          for="hasHeaders27"
        >
          
                        File Has Headers
                    
        </label>
      </div>
       
      <div
        class="form-group csv-import-file"
      >
        <input
          class="form-control-file"
          name="csv"
          type="file"
        />
         
        <!---->
      </div>
       
      <div
        class="form-group"
      >
        <button
          class="btn btn-primary"
          disabled="disabled"
          type="submit"
        >
          
                        Next
                    
        </button>
      </div>
    </div>
     
    <div
      class="vue-csv-uploader-part-two"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`VueCsvImport headers prop removes checkbox and use headers 1`] = `
<div
  class="vue-csv-uploader"
>
  <div
    class="form"
  >
    <div
      class="vue-csv-uploader-part-one"
    >
      <div
        class="form-check form-group csv-import-checkbox"
      >
        <input
          class="form-check-input"
          id="hasHeaders23"
          type="checkbox"
          value="true"
        />
         
        <label
          class="form-check-label"
          for="hasHeaders23"
        >
          
                        File Has Headers
                    
        </label>
      </div>
       
      <div
        class="form-group csv-import-file"
      >
        <input
          class="form-control-file"
          name="csv"
          type="file"
        />
         
        <!---->
      </div>
       
      <div
        class="form-group"
      >
        <button
          class="btn btn-primary"
          disabled="disabled"
          type="submit"
        >
          
                        Next
                    
        </button>
      </div>
    </div>
     
    <div
      class="vue-csv-uploader-part-two"
    >
      <!---->
    </div>
  </div>
</div>
`;
